[feat] client publish message
